--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format": "prettier --write '**/*.ts'",
     "format:verify": "prettier --check '**/*.ts'",
     "prepack": "npm run build",
-    "postinstall": "npm run build"
+    "postinstall": "tsc"
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
