--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "axios": "^0.19.2",
     "jest": "^24.0.0",
     "prettier": "^1.19.1",
-    "qs": "^6.9.3",
     "ts-jest": "^24.3.0",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.2",
+    "@types/lodash": "^4.14.149"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.149",
     "jsonwebtoken": "^8.5.1",
+    "qs": "^6.9.3",
     "lodash": "^4.17.15",
     "nock": "^11.9.1",
     "node-jose": "^1.1.3",
