--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,5 @@
     "baseUrl": "./",
     "outDir": "./dist",
   },
-  "exclude": ["./dist"],
-  "include": ["./lib/**"]
+  "exclude": ["./dist"]
 }
