--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest -i tests/",
     "format": "prettier --write '**/*.ts'",
     "format:verify": "prettier --check '**/*.ts'",
-    "prepack": "npm build"
+    "prepack": "npm run build"
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
