--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "author": "Sector Labs <open-source@sectorlabs.ro>",
   "license": "MIT",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=12.0.0"
   },
   "scripts": {
     "build": "tsc",
     "test": "jest -i tests/",
     "format": "prettier --write '**/*.ts'",
-    "format:verify": "prettier --check '**/*.ts'",
-    "prepack": "npm run build"
+    "format:verify": "prettier --check '**/*.ts'"
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
